# flexbuild

./: .gitignore  LICENSE  README.md  pyproject.toml  tinybuild.py
.github/workflows/: tests.yaml
flexbuild/: project.py
tests/: test_entrypoints.py  test_extras.py  test_install.py  utils.py
tests/example_basic/: pyproject.toml
tests/example_entrypoints/: pyproject.toml
tests/example_exclude/: __init__.py  pyproject.toml
tests/example_extras/: __init__.py  pyproject.toml
tests/example_extras/dependency/: __init__.py  pyproject.toml
tests/example_folder/: pyproject.toml
tests/example_folder/project/: __init__.py
tests/example_metadata/: pyproject.toml
tests/example_monorepo/namespace1/project1/: pyproject.toml
tests/example_monorepo/namespace1/project2/: code.py  pyproject.toml
tests/example_namespace/: pyproject.toml
tests/namespace1/namespace2/project/: pyproject.toml
tests/project_basic/: pyproject.toml
tests/project_namespace/: pyproject.toml
tinybuild/: build_editable.py  build_sdist.py  build_wheel.py  helpers.py  include.py  project.py  select.py  wheel.py
