[project]
name = "project"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = []

[tool.uv.sources]
flexbuild = { path = "../..", editable = true }

[build-system]
requires = ["flexbuild"]
build-backend = "flexbuild"
include = ["*.py", "pyproject.toml", "include.txt"]
exclude = ["exclude.py"]
