[project]
name = "project"
version = "0.1.0"
description = "A test project with metadata"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{name = "Author", email = "author@example.com"}]
maintainers = [{name = "Maintainer", email = "maintainer@example.com"}]
keywords = ["test", "example"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
]
dependencies = []

[project.urls]
Homepage = "https://example.com"
Repository = "https://github.com/example/project"

[tool.uv.sources]
flexbuild = { path = "../..", editable = true }

[build-system]
requires = ["flexbuild"]
build-backend = "flexbuild"
